# slang

./: .gitignore  Cargo.toml  ERROR_REFACTORING_SUMMARY.md  GRAMMAR.md  GRAMMER.md  README.md  test_ast_conditionals.sl
.github/workflows/: build_and_test.yaml  publish_documentation.yaml
crate/backend/: Cargo.toml  README.md
crate/backend/src/: bytecode.rs  codegen.rs  compiler.rs  lib.rs  native.rs  value.rs  vm.rs
crate/backend/src/value/: mod.rs
crate/backend/src/value/operations/: arithmetic.rs  comparison.rs  logical.rs  mod.rs
crate/compilation_context/: Cargo.toml  README.md
crate/derive/: Cargo.toml  README.md
crate/error/: Cargo.toml  README.md
crate/frontend/: Cargo.toml  README.md
crate/frontend/src/: ast_printer.rs  compiler.rs  error.rs  error_codes.rs  lexer.rs  lib.rs  parse_error.rs  parser.rs  semantic_analyzer.rs  semantic_error.rs  token.rs  token_printer.rs  type_checker.rs  type_guard.rs  types.rs  visitor.rs
crate/frontend/src/semantic_analysis/: analyzer.rs  error.rs  error_collector.rs  mod.rs  operations.rs  semantic_analyzer.rs  traits.rs  type_system.rs
crate/frontend/src/semantic_analysis/analyzer/: core.rs  mod.rs  native_functions.rs  scope_manager.rs
crate/frontend/src/semantic_analysis/analyzer_modules/: core.rs  mod.rs  native_functions.rs  scope_manager.rs  symbol_resolver.rs
crate/frontend/src/semantic_analysis/operations/: arithmetic.rs  helpers.rs  logical.rs  mod.rs  relational.rs  unary.rs
crate/frontend/src/semantic_analysis/validation/: coercion.rs  coordinator.rs  inference.rs  mod.rs  type_checker.rs  type_validation.rs
crate/frontend/src/semantic_analysis/visitors/: expression_visitor.rs  mod.rs  statement_visitor.rs
crate/ir/: Cargo.toml  README.md
docs/: index.html  style.css
src/: README.md  ast.rs  ast_printer.rs  bytecode.rs  cli.rs  compilation_pipeline.rs  compiler.rs  error.rs  exit.rs  init.rs  lexer.rs  main.rs  parser.rs  token.rs  type_checker.rs  types.rs  value.rs  visitor.rs  vm.rs
src/types/: mod.rs  (+1 more)
tests/: README.md  e2e_tests.rs  lib.rs  test_utils.rs
(+200 files in other folders)
