[package]
name = "slang"
version = "0.1.0"
edition = "2024"

[features]
default = []
print-byte_code = []
print-ast = []
trace-execution = []

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
zip = "2.6.1"
colored = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
rstest = "0.18.2"
