[package]
name = "slang"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace]
members = [
        "crate/frontend",
        "crate/ir",
        "crate/backend",
        "crate/types",
        "crate/derive",
        "crate/shared",
]

[features]
default = []
print-byte_code = ["slang_backend/print-byte_code"]
print-ast = ["slang_ir/print-ast"]
print-tokens = ["slang_frontend/print-tokens"]
trace-execution = ["slang_backend/trace-execution"]

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
zip = "2.6.1"
colored = "2.0.4"
slang_frontend = { path = "crate/frontend", features = [] }
slang_ir = { path = "crate/ir", features = [] }
slang_backend = { path = "crate/backend", features = [] }
slang_types = { path = "crate/types", features = [] }
slang_shared = { path = "crate/shared", features = [] }


[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
rstest = "0.18.2"
