[package]
name = "slang_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
slang_ir = { path = "../ir" }
slang_derive = { path = "../derive" }
slang_error = { path = "../error" }

[features]
default = []
trace-execution = []
print-byte_code = []

[lib]
name = "slang_backend"
path = "src/lib.rs"

