[package]
name = "slang_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.0.4"
slang_ir = { path = "../ir" }
slang_types = { path = "../types" }
slang_shared = { path = "../shared" }

[features]
default = []
print-tokens = []

[lib]
name = "slang_frontend"
path = "src/lib.rs"

